[project]
name = "humility-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dcor>=0.6",
    "ipynb>=0.5.1",
    "joblib>=1.5.2",
    "numpy>=2.3.3",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "psutil>=7.1.0",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
